--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 Hello World</br> 
 This is a test</br> 
 Welcome to our website</br> 
+On this website we will present information about our Jazz group</br>
 More to follow</br> 
+
