--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	
-	<link rel = "stylesheet" type = "text/css" href = "stylesheet.css" media = "screen"/>
+	<link rel = "stylesheet" type = "text/css" href = "../stylesheet.css" media = "screen"/>
 	<!-- <link href = "https://fonts.googleapis.com/css?family=Baskervville|Cinzel|Great+Vibes|Marck+Script|Parisienne|Sacramento&display=swap" rel = "stylesheet"> --> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,17 +26,27 @@
     </header>
 
     <nav>
-        <a style = "text-decoration: underline !important; text-underline-offset: 4px;" href = "https://www.theelevators.de">Home</a></br>
+        <a href = "https://www.theelevators.de">Home</a></br>
         <a href = "https://www.theelevators.de/dates">Termine</a></br>
         <a href = "https://www.theelevators.de/setlist">Setlist</a></br>
         <a href = "https://www.theelevators.de/resources">Docs</a></br>
-        <a href = "https://www.theelevators.de/about">About</a></br>
+        <a style = "text-decoration: underline !important; text-underline-offset: 4px;" href = "https://www.theelevators.de/about">About</a></br>
     </nav>
     <article>
-        Wir sind die Akajazz Gruppe aus Braunschweig und wir freuen uns, euch Jazz Stücke vorzuspielen!</br>
-        Auftritte haben wir hauptsächlich in Braunschweig und der näheren Umgebung. Unsere Proben sind mittwochs in der 
-        <a href = "https://www.schuntille.de/">Schuntille</a>.</br> 
-        Schreibt uns bei Interesse gerne an! Wir freuen uns über neue Ideen und Input von außerhalb. 
+        <b>Wir möchten uns gerne vorstellen</b>: </br> 
+        <ul>
+            <li>Schlagzeug — Jochen</li>
+            <li>Bass — Sven(ja)</li>
+            <li>Querflöte — Bine</li>
+            <li>Trompete — Hatti</li>
+            <li>Posaune — Steffi</li>
+            <li>Klavier 1 — Marie</li>
+            <li>Klavier 2 — Boki</li>
+            <li>Saxophon — ;-]</li>
+            <li>Posaune 2 — ;-]</li>
+            <li>...</li>
+        </ul> 
+        ... und zusammen sind wir <i>The Elevators</i> bzw. <i>AkaJazz</i>! 
     </article>
 </body>
 
