--- a/dates/index.html
+++ b/dates/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	
-	<link rel = "stylesheet" type = "text/css" href = "stylesheet.css" media = "screen"/>
+	<link rel = "stylesheet" type = "text/css" href = "../stylesheet.css" media = "screen"/>
 	<!-- <link href = "https://fonts.googleapis.com/css?family=Baskervville|Cinzel|Great+Vibes|Marck+Script|Parisienne|Sacramento&display=swap" rel = "stylesheet"> --> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,17 +26,20 @@
     </header>
 
     <nav>
-        <a style = "text-decoration: underline !important; text-underline-offset: 4px;" href = "https://www.theelevators.de">Home</a></br>
-        <a href = "https://www.theelevators.de/dates">Termine</a></br>
+        <a href = "https://www.theelevators.de">Home</a></br>
+        <a style = "text-decoration: underline !important; text-underline-offset: 4px;" href = "https://www.theelevators.de/dates">Termine</a></br>
         <a href = "https://www.theelevators.de/setlist">Setlist</a></br>
         <a href = "https://www.theelevators.de/resources">Docs</a></br>
         <a href = "https://www.theelevators.de/about">About</a></br>
     </nav>
     <article>
-        Wir sind die Akajazz Gruppe aus Braunschweig und wir freuen uns, euch Jazz Stücke vorzuspielen!</br>
-        Auftritte haben wir hauptsächlich in Braunschweig und der näheren Umgebung. Unsere Proben sind mittwochs in der 
-        <a href = "https://www.schuntille.de/">Schuntille</a>.</br> 
-        Schreibt uns bei Interesse gerne an! Wir freuen uns über neue Ideen und Input von außerhalb. 
+        <b>Regelmäßige Proben</b>: Immer Mittwochs um 19 Uhr, Schuntille Braunschweig</br></br> 
+        <b>Auftritte</b>: </br> 
+        <ul>
+            <li>Freier Auftritt Jazz Night — ?, Schuntille Braunschweig</li>
+            <li>Musikum — 27./28. Juni 2025, Schuntille Braunschweig</li>
+            <li>...</li>
+        </ul> 
     </article>
 </body>
 
