Add target to href on home

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <article>
         Wir sind die Akajazz Gruppe aus Braunschweig und wir freuen uns, euch Jazz Stücke vorzuspielen!</br>
         Auftritte haben wir hauptsächlich in Braunschweig und der näheren Umgebung. Unsere Proben sind mittwochs in der 
-        <a href = "https://www.schuntille.de/">Schuntille</a>.</br> 
+        <a href = "https://www.schuntille.de/" target = "_blank" rel = "noopener noreferrer">Schuntille</a>.</br> 
         Schreibt uns bei Interesse gerne an! Wir freuen uns über neue Ideen und Input von außerhalb. 
     </article>
 </body>
