--- a/dates/index.html
+++ b/dates/index.html
@@ -33,7 +33,7 @@
         <a href = "https://www.theelevators.de/about">About</a></br>
     </nav>
     <article>
-        <b>Regelmäßige Proben</b>: Immer Mittwochs um 19 Uhr, Schuntille Braunschweig</br></br> 
+        <b>Regelmäßige Proben</b>: Immer mittwochs um 19 Uhr, Schuntille Braunschweig.</br></br> 
         <b>Auftritte</b>: </br> 
         <ul>
             <li>Freier Auftritt Jazz Night — ?, Schuntille Braunschweig</li>
